Added title and description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Jens Vercauteren - HTML5 Boilerplate</title>
+        <title>My boilerplate</title>
         <meta name="description" content="This is my HTML5 Boilerplate">
     </head>
     <body>
