--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#e85e00">
 
-        <link rel="stylesheet" href="css/screen.css"
+        <link rel="stylesheet" href="css/screen.css">
         <link rel="stylesheet" href="css/normalize.css">
     </head>
     <body>
